--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-1.49MB/s(Youtube:不良林), server: 165.154.243.157, port: 48002, type: trojan, password: 9cbbeb3c-d2b6-482c-97c1-1e037f0102f2, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-988.0KB/s(Youtube:不良林), server: tw01.henet.cyou, port: 20000, type: vmess, uuid: b3ea4273-e3a8-46a3-93b2-1aaa1c9dbd61, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: tw01.henet.cyou}}
-  - {name: 🇺🇸 美国-2.54MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-632.9KB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-752.0KB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 2df8cb33-de40-438c-840a-5f1d05fe7518, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
-  - {name: 🇺🇸 美国-1.16MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇬🇧 英国-771.3KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-931.7KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇸🇬 新加坡-709.7KB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-917.1KB/s(Youtube:不良林), server: 72.140.224.197, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.16MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-345.1KB/s(Youtube:不良林), server: 161.8.184.62, port: 29622, type: ss, cipher: aes-256-gcm, password: !<str> 89930128}
+  - {name: 🇺🇸 美国-372.0KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-760.1KB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.60MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-985.2KB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
+  - {name: 🇯🇵 日本-5.35MB/s(Youtube:不良林), server: bpjchongkong.kozow.com, port: 80, type: vmess, uuid: 9b29114b-723b-40ca-bc2b-e3f97d43534d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /images, ws-headers: {Host: bpjchongkong.kozow.com}}
+  - {name: 🇭🇰 香港-429.5KB/s(Youtube:不良林), server: 43.129.30.122, port: 12359, type: vmess, uuid: f78921c4-5a97-47ed-db4c-e88b799e6581, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-988.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-632.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-752.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 🇬🇧 英国-771.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-931.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-709.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-917.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-372.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-760.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-985.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-429.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-988.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-632.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-752.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 🇬🇧 英国-771.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-931.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-709.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-917.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-372.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-760.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-985.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-429.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-988.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-632.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-752.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 🇬🇧 英国-771.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-931.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-709.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-917.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-372.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-760.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-985.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-429.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-988.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-429.5KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-988.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-632.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-752.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 🇬🇧 英国-771.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-931.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-709.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-917.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-372.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-760.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-985.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-429.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-988.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-632.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-752.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 🇬🇧 英国-771.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-931.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-709.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-917.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-372.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-760.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-985.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-429.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-988.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-632.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-752.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 🇬🇧 英国-771.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-931.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-709.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-917.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-372.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-760.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-985.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-429.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-988.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-632.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-752.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 🇬🇧 英国-771.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-931.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-709.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-917.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-372.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-760.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-985.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-429.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
