--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-613.7KB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-985.2KB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
-  - {name: 🇺🇸 美国-1.23MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.60MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.17MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.29MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-938.8KB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1007.8KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇳 台湾-889.3KB/s(Youtube:不良林), server: tw01.henet.cyou, port: 20000, type: vmess, uuid: b3ea4273-e3a8-46a3-93b2-1aaa1c9dbd61, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: tw01.henet.cyou}}
+  - {name: 🇨🇦 加拿大-702.0KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-809.4KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-1.27MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇬🇧 英国-500.8KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇦 加拿大-1.34MB/s(Youtube:不良林), server: usyy.884899.cf, port: 443, type: trojan, password: 2debb06b-95ce-4e9b-956a-6cf7cadac30c, sni: usyy.884899.cf, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.88MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.07MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-3.49MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-613.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-985.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇯🇵 日本-938.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1007.8KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-889.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-702.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-809.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
       - 🇬🇧 英国-500.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.49MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-613.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-985.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇯🇵 日本-938.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1007.8KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-889.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-702.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-809.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
       - 🇬🇧 英国-500.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.49MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-613.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-985.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇯🇵 日本-938.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1007.8KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-889.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-702.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-809.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
       - 🇬🇧 英国-500.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.49MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-889.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.49MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-613.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-985.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇯🇵 日本-938.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1007.8KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-889.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-702.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-809.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
       - 🇬🇧 英国-500.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.49MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-613.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-985.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇯🇵 日本-938.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1007.8KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-889.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-702.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-809.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
       - 🇬🇧 英国-500.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.49MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-613.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-985.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇯🇵 日本-938.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1007.8KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-889.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-702.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-809.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
       - 🇬🇧 英国-500.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.49MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-613.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-985.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇯🇵 日本-938.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1007.8KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-889.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-702.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-809.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
       - 🇬🇧 英国-500.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.49MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
